Creating new recipe and html. problem with notes in receptor.html