@@ -1,10 +1,12 @@
 package com.ayush.recipeproject.controller;
 
+import com.ayush.recipeproject.command.RecipeCommand;
 import com.ayush.recipeproject.service.RecipeService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 @Slf4j
@@ -18,9 +20,18 @@ public class RecipeController {
 
     @RequestMapping("/recipe/show/{id}")
     public String showRecipe(@PathVariable String id, Model model){
-        model.addAttribute("recipe",recipeService.findById(new Long(id)));
+        model.addAttribute("recipe",recipeService.findById(Long.valueOf(id)));
         return "show";
     }
-
-
+    @RequestMapping("/recipe/new")
+    public String newRecipe(Model model){
+        model.addAttribute("recipe",new RecipeCommand());
+        return "receptor";
+    }
+    @PostMapping
+    @RequestMapping("/recipe")
+    public String saveOrUpdate(RecipeCommand recipeCommand){
+        RecipeCommand saveCommand = recipeService.saveRecipeCommand(recipeCommand);
+        return "redirect:/recipe/show" + recipeCommand.getId();
+    }
 }
